debugging html rendering
debugging html rendering

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,9 +4,9 @@
 
 <head>
 
-    <meta charset="utf-8"/>
+<!--     <meta charset="utf-8"/>
 
-    <link rel="icon" href="../static/react/favicon.ico"/>
+    <link rel="icon" href="../static/react/favicon.ico"/> 
 
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
 
@@ -26,14 +26,15 @@
 
     <script defer="defer" src="../static/react/js/main.5b7bf416.js">
 
-    </script><link href="../static/react/css/main.6e038066.css" rel="stylesheet">
+    </script><link href="../static/react/css/main.6e038066.css" rel="stylesheet"> -->
 
 </head>
 
 <body>
 
+    
     <noscript>You need to enable JavaScript to run this app.</noscript>
-
+    <h1>This is heading 1</h1>
     <div id="root"></div>
 
 </body>
