html rendering debug
html rendering debug

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 
 <head>
 
-<!--     <meta charset="utf-8"/>
+    <meta charset="utf-8"/>
 
     <link rel="icon" href="../static/react/favicon.ico"/> 
 
@@ -14,7 +14,7 @@
 
     <meta name="description" content="Web site created using create-react-app"/>
 
-    <link rel="apple-touch-icon" href="../static/react/logo192.png"/>
+    <!-- <link rel="apple-touch-icon" href="../static/react/logo192.png"/>
 
     <link rel="manifest" href="../static/react/manifest.json"/>
 
