--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
 
     <meta name="description" content="Web site created using create-react-app"/>
 
-    <!-- <link rel="apple-touch-icon" href="../static/react/logo192.png"/>
+    <link rel="apple-touch-icon" href="../static/react/logo192.png"/>
 
     <link rel="manifest" href="../static/react/manifest.json"/>
 
@@ -24,9 +24,7 @@
 
     <style>.button{background-color:#fee715FF;color:"#101820FF";font-weight:700}</style>
 
-    <script defer="defer" src="../static/react/js/main.5b7bf416.js">
-
-    </script><link href="../static/react/css/main.6e038066.css" rel="stylesheet"> -->
+    
 
 </head>
 
@@ -34,8 +32,10 @@
 
     
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <h1>This is heading 1</h1>
+
     <div id="root"></div>
+
+    <script src="../static/react/js/main.5b7bf416.js"></script><link href="../static/react/css/main.6e038066.css" rel="stylesheet">
 
 </body>
 
