troubleshooting API 403 error
changed relative urls to dev/

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
 
     <meta charset="utf-8"/>
 
-    <link rel="icon" href="../static/react/favicon.ico"/> 
+    <link rel="icon" href="dev/static/react/favicon.ico"/> 
 
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
 
@@ -14,9 +14,9 @@
 
     <meta name="description" content="Web site created using create-react-app"/>
 
-    <link rel="apple-touch-icon" href="../static/react/logo192.png"/>
+    <link rel="apple-touch-icon" href="dev/static/react/logo192.png"/>
 
-    <link rel="manifest" href="../static/react/manifest.json"/>
+    <link rel="manifest" href="dev/static/react/manifest.json"/>
 
     <title>React App</title>
 
@@ -35,7 +35,7 @@
 
     <div id="root"></div>
 
-    <script src="../static/react/js/main.5b7bf416.js"></script><link href="../static/react/css/main.6e038066.css" rel="stylesheet">
+    <script src="../static/react/js/main.5b7bf416.js"></script><link href="dev/static/react/css/main.6e038066.css" rel="stylesheet">
 
 </body>
 
