--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@
 
     <div id="root"></div>
 
-    <script src="../static/react/js/main.5b7bf416.js"></script><link href="dev/static/react/css/main.6e038066.css" rel="stylesheet">
+    <script src="dev/static/react/js/main.5b7bf416.js"></script><link href="dev/static/react/css/main.6e038066.css" rel="stylesheet">
 
 </body>
 
