uncommmented manifest.json reference
and shifted <script defer="defer" back to <head> tag to resolve react logo rendering issues

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
 
     <link rel="apple-touch-icon" href="dev/static/react/logo192.png"/>
 
-    <!-- <link rel="manifest" href="../static/react/manifest.json"/> -->
+    <link rel="manifest" href="../static/react/manifest.json"/>
 
     <title>React App</title>
 
@@ -24,7 +24,7 @@
 
     <style>.button{background-color:#fee715FF;color:"#101820FF";font-weight:700}</style>
 
-    
+    <script defer="defer" src="dev/static/react/js/main.5b7bf416.js"></script><link href="dev/static/react/css/main.6e038066.css" rel="stylesheet">
 
 </head>
 
@@ -34,8 +34,6 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
 
     <div id="root"></div>
-
-    <script src="dev/static/react/js/main.5b7bf416.js"></script><link href="dev/static/react/css/main.6e038066.css" rel="stylesheet">
 
 </body>
 
