added back asset-manifest to see if dynamic links dev/ work

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
 
     <link rel="apple-touch-icon" href="dev/static/react/logo192.png"/>
 
-    <!-- <link rel="manifest" href="dev/static/react/manifest.json"/> -->
+    <link rel="manifest" href="dev/static/react/manifest.json"/>
 
     <title>React App</title>
 
