--- a/templates/index.html
+++ b/templates/index.html
@@ -1,38 +1,34 @@
 <!doctype html>
 
 <html lang="en">
-
+    
 <head>
-
+    
     <meta charset="utf-8"/>
-
-    <link rel="icon" href="dev/static/react/favicon.ico"/> 
-
+    
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
-
+    
     <meta name="theme-color" content="#000000"/>
-
+    
     <meta name="description" content="Web site created using create-react-app"/>
-
-    <link rel="apple-touch-icon" href="dev/static/react/logo192.png"/>
-
-    <link rel="manifest" href="dev/static/react/manifest.json"/>
-
+    
     <title>React App</title>
-
+    
     <script>window.token="{{token}}"</script>
+    
+    <style>.button{background-color:#fee715FF;color:"#101820FF";font-weight:700}
+    
+    </style><script defer="defer" src="/static/react/js/main.ff9b9954.js">
 
-    <style>.button{background-color:#fee715FF;color:"#101820FF";font-weight:700}</style>
 
-    <script defer="defer" src="dev/static/react/js/main.93315627.js"></script><link href="dev/static/react/css/main.6e038066.css" rel="stylesheet">
-
+    </script><link href="/static/react/css/main.6e038066.css" rel="stylesheet">
+    
 </head>
 
 <body>
-
     
     <noscript>You need to enable JavaScript to run this app.</noscript>
-
+    
     <div id="root"></div>
 
 </body>
