added back dev/

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,10 +18,10 @@
     
     <style>.button{background-color:#fee715FF;color:"#101820FF";font-weight:700}
     
-    </style><script defer="defer" src="/static/react/js/main.ff9b9954.js">
+    </style><script defer="defer" src="dev/static/react/js/main.ff9b9954.js">
 
 
-    </script><link href="/static/react/css/main.6e038066.css" rel="stylesheet">
+    </script><link href="dev/static/react/css/main.6e038066.css" rel="stylesheet">
     
 </head>
 
